--- a/Soccar [UI]/src/resources/fxml/CreateRoomFXML.fxml
+++ b/Soccar [UI]/src/resources/fxml/CreateRoomFXML.fxml
@@ -43,64 +43,91 @@
       </HBox>
       <HBox alignment="CENTER" layoutY="86.0" prefHeight="562.0" prefWidth="1200.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="86.0">
          <children>
-            <AnchorPane prefHeight="543.0" prefWidth="852.0">
+            <AnchorPane prefHeight="588.0" prefWidth="852.0">
                <children>
                   <Label layoutX="214.0" layoutY="81.0" text="ROOM CONFIGURATION" textFill="WHITE">
                      <font>
                         <Font name="Century Gothic" size="36.0" />
                      </font>
                   </Label>
-                  <Label layoutX="199.0" layoutY="200.0" text="ROOM NAME" textFill="WHITE">
+                  <Label layoutX="199.0" layoutY="160.0" text="ROOM NAME" textFill="WHITE">
                      <font>
                         <Font name="Century Gothic" size="24.0" />
                      </font>
                   </Label>
-                  <Label layoutX="222.0" layoutY="260.0" text="PASSWORD" textFill="WHITE">
+                  <Label layoutX="222.0" layoutY="220.0" text="PASSWORD" textFill="WHITE">
                      <font>
                         <Font name="Century Gothic" size="24.0" />
                      </font>
                   </Label>
-                  <Label layoutX="151.0" layoutY="313.0" text="ROOM CAPACITY" textFill="WHITE">
+                  <Label layoutX="151.0" layoutY="273.0" text="ROOM CAPACITY" textFill="WHITE">
                      <font>
                         <Font name="Century Gothic" size="24.0" />
                      </font>
                   </Label>
-                  <Label layoutX="300.0" layoutY="375.0" text="MAP" textFill="WHITE">
+                  <Label layoutX="297.0" layoutY="389.0" text="MAP" textFill="WHITE">
                      <font>
                         <Font name="Century Gothic" size="24.0" />
                      </font>
                   </Label>
-                  <TextField fx:id="textFieldRoomName" layoutX="390.0" layoutY="194.0" promptText="ROOM NAME">
+                  <TextField fx:id="textFieldRoomName" layoutX="390.0" layoutY="154.0" promptText="ROOM NAME">
                      <font>
                         <Font name="Century Gothic" size="24.0" />
                      </font>
                   </TextField>
-                  <PasswordField fx:id="textFieldPassword" layoutX="390.0" layoutY="252.0" prefHeight="47.0" prefWidth="305.0" promptText="PASSWORD">
+                  <PasswordField fx:id="textFieldPassword" layoutX="390.0" layoutY="212.0" prefHeight="47.0" prefWidth="305.0" promptText="PASSWORD">
                      <font>
                         <Font name="Century Gothic" size="24.0" />
                      </font>
                   </PasswordField>
-                  <Slider fx:id="sliderCapacity" blockIncrement="2.0" layoutX="390.0" layoutY="309.0" majorTickUnit="6.0" max="6.0" min="2.0" minorTickCount="2" prefHeight="38.0" prefWidth="305.0" snapToTicks="true" value="2.0" />
-                  <Label layoutX="392.0" layoutY="338.0" text="2" textFill="WHITE">
+                  <Slider fx:id="sliderCapacity" blockIncrement="2.0" layoutX="390.0" layoutY="269.0" majorTickUnit="6.0" max="6.0" min="2.0" minorTickCount="2" prefHeight="38.0" prefWidth="305.0" snapToTicks="true" value="2.0" />
+                  <Label layoutX="392.0" layoutY="298.0" text="2" textFill="WHITE">
                      <font>
                         <Font name="Century Gothic" size="18.0" />
                      </font>
                   </Label>
-                  <Label layoutX="538.0" layoutY="338.0" text="4" textFill="WHITE">
+                  <Label layoutX="538.0" layoutY="298.0" text="4" textFill="WHITE">
                      <font>
                         <Font name="Century Gothic" size="18.0" />
                      </font>
                   </Label>
-                  <Label layoutX="683.0" layoutY="338.0" text="6" textFill="WHITE">
+                  <Label layoutX="683.0" layoutY="298.0" text="6     PLAYERS" textFill="WHITE">
                      <font>
                         <Font name="Century Gothic" size="18.0" />
                      </font></Label>
-                  <ComboBox id="combo" fx:id="cbMap" layoutX="390.0" layoutY="367.0" prefHeight="47.0" prefWidth="305.0" promptText="SELECT" stylesheets="@../css/Style.css" />
-                  <Button id="button" fx:id="btnCreateRoom" layoutX="324.0" layoutY="482.0" mnemonicParsing="false" prefHeight="66.0" stylesheets="@../css/Style.css" text="CREATE ROOM" textFill="WHITE">
+                  <ComboBox id="combo" fx:id="cbMap" layoutX="390.0" layoutY="381.0" prefHeight="47.0" prefWidth="305.0" promptText="SELECT" stylesheets="@../css/Style.css" />
+                  <Button id="button" fx:id="btnCreateRoom" layoutX="324.0" layoutY="521.0" mnemonicParsing="false" prefHeight="66.0" stylesheets="@../css/Style.css" text="CREATE ROOM" textFill="WHITE">
                      <font>
                         <Font name="Century Gothic" size="24.0" />
                      </font>
                   </Button>
+                  <Label layoutX="297.0" layoutY="447.0" text="BALL" textFill="WHITE">
+                     <font>
+                        <Font name="Century Gothic" size="24.0" />
+                     </font>
+                  </Label>
+                  <ComboBox id="combo" fx:id="cbBall" layoutX="391.0" layoutY="439.0" prefHeight="47.0" prefWidth="305.0" promptText="SELECT" stylesheets="@../css/Style.css" />
+                  <Slider fx:id="sliderDuration" blockIncrement="1.0" layoutX="390.0" layoutY="321.0" majorTickUnit="1.0" max="3.0" min="1.0" prefHeight="38.0" prefWidth="305.0" snapToTicks="true" value="1.0" />
+                  <Label layoutX="153.0" layoutY="325.0" text="GAME DURATION" textFill="WHITE">
+                     <font>
+                        <Font name="Century Gothic" size="24.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="392.0" layoutY="348.0" text="3" textFill="WHITE">
+                     <font>
+                        <Font name="Century Gothic" size="18.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="538.0" layoutY="348.0" text="5" textFill="WHITE">
+                     <font>
+                        <Font name="Century Gothic" size="18.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="674.0" layoutY="349.0" text="10     MINUTES" textFill="WHITE">
+                     <font>
+                        <Font name="Century Gothic" size="18.0" />
+                     </font>
+                  </Label>
                </children>
             </AnchorPane>
          </children>
