Edited the CSS file for that chat listview.

--- a/Soccar [UI]/src/resources/css/Style.css
+++ b/Soccar [UI]/src/resources/css/Style.css
@@ -62,3 +62,9 @@
     -fx-font-size: 24;
     -fx-font-family: "Century Gothic";  
 }
+
+#chat .list-cell {
+    -fx-list-cell-border-color: white;
+    -fx-font-size: 16;
+    -fx-font-family: "Century Gothic";  
+}
