--- a/Soccar [UI]/src/resources/fxml/SessionViewFXML.fxml
+++ b/Soccar [UI]/src/resources/fxml/SessionViewFXML.fxml
@@ -77,7 +77,7 @@
                         <Font name="Century Gothic" size="36.0" />
                      </font>
                   </Label>
-                  <ListView id="list" fx:id="lvChat" layoutX="401.0" layoutY="168.0" prefHeight="271.0" prefWidth="418.0" stylesheets="@../css/Style.css" />
+                  <ListView id="chat" fx:id="lvChat" layoutX="401.0" layoutY="168.0" prefHeight="271.0" prefWidth="418.0" stylesheets="@../css/Style.css" />
                   <TextField fx:id="txtChat" layoutX="401.0" layoutY="447.0" prefHeight="35.0" prefWidth="341.0" promptText="TYPE HERE">
                      <font>
                         <Font name="Century Gothic" size="18.0" />
